# CommunityIQ-AI

./: .env.example  .gitignore  Dockerfile  README.md  WORKFLOW.md  docker-compose.yml  package-lock.json  pyproject.toml  pyrightconfig.json  requirements.txt  test_chat.json
agents/: analytics_agent.py  directory_agent.py  email_dispatch_agent.py  geo_clustering_agent.py  image_analysis_agent.py  location_agent.py  orchestrator.py  portal_publisher_agent.py  prediction_agent.py  status_tracker_agent.py
analytics/: __init__.py  pdf_report.py  pipeline.py
api/: Dockerfile  main.py  requirements.txt
core/: config.py  database.py  gmail_client.py  redis_client.py  sse_queue.py
data/: complaints_seed.json  historical_clusters.json  municipalities.xlsx
frontend/dashboard/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/dashboard/public/: index.html
frontend/dashboard/src/: App.jsx  index.css
frontend/public/: index.html  package-lock.json  package.json
frontend/public-portal/: package-lock.json  package.json
frontend/public-portal/public/: index.html
frontend/public-portal/src/: App.jsx  index.css
seed/: generate_complaints.py  get_refresh_token.py  seed_municipalities.py  seed_redis.py  seed_to_gmail.py
tests/: smoke_test.py  test_clustering.py  test_directory_agent.py  test_full_pipeline.py  test_image_analysis.py  test_location_agent.py  test_prediction.py
tools/: db_tools.py  directory_tools.py  exif_tools.py  gemini_tools.py  gmail_tools.py  maps_tools.py  maps_tools.py.bak  sse_tools.py
(+45 files in other folders)
